--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # These will be added to the window so the Studio can read them
 SANITY_PROJECT_ID="7i6pmun4"
 SANITY_DATASET="production"
-SANITY_API_VERSION=2023-05-11
+SANITY_API_VERSION="2023-05-11"
 
 # Generated in sanity.io/manage
 # Token with "Viewer" permissions
