--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "groq": "^3.10.1",
+    "keen-slider": "^6.8.5",
     "lucide-react": "^0.216.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
