--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "satori": "^0.4.0",
     "styled-components": "^5.3.6",
     "swiper": "^9.3.2",
+    "tw-elements": "^1.0.0-beta2",
     "zod": "^3.19.1"
   },
   "devDependencies": {
