--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "daisyui": "^2.52.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "framer-motion": "^10.12.16",
     "groq": "^3.10.1",
     "keen-slider": "^6.8.5",
     "lucide-react": "^0.216.0",
