--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-router-dom": "^6.12.1",
     "remix-utils": "^6.3.0",
     "sanity": "^3.11.1",
     "sanity-plugin-iframe-pane": "^2.1.1",
