--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/preview-kit": "^1.2.10",
     "@sanity/vision": "^3.9.1",
+    "atropos": "^1.0.2",
     "daisyui": "^2.52.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -26,6 +27,7 @@
     "groq": "^3.10.1",
     "keen-slider": "^6.8.5",
     "lucide-react": "^0.216.0",
+    "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
